Describe changes to HTML file

--- a/b.html
+++ b/b.html
@@ -12,5 +12,10 @@
         <li>Banana</li>
         <li>Orange</li>
     </ul>
+    <ol>
+        <li>Mango</li>
+        <li>Guava</li>
+    </ol>
 </body>
 </html>
+
